
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






union bpf_attr {int map_fd; int value; int key; } ;
typedef int attr ;


 int BPF_MAP_LOOKUP_ELEM ;
 int __NR_bpf ;
 int ptr_to_u64 (void*) ;
 int syscall (int ,int ,union bpf_attr*,int) ;

int bpf_lookup_elem(int fd, void *key, void *value)
{
 union bpf_attr attr = {
  .map_fd = fd,
  .key = ptr_to_u64(key),
  .value = ptr_to_u64(value),
 };

 return syscall(__NR_bpf, BPF_MAP_LOOKUP_ELEM, &attr, sizeof(attr));
}
