; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_45010.c_bpf_lookup_elem.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_45010.c_bpf_lookup_elem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.bpf_attr = type { i32 }

@__NR_bpf = common dso_local global i32 0, align 4
@BPF_MAP_LOOKUP_ELEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bpf_lookup_elem(i32 %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %union.bpf_attr, align 4
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = bitcast %union.bpf_attr* %7 to i32*
  %9 = load i8*, i8** %6, align 8
  %10 = call i32 @ptr_to_u64(i8* %9)
  store i32 %10, i32* %8, align 4
  %11 = load i32, i32* @__NR_bpf, align 4
  %12 = load i32, i32* @BPF_MAP_LOOKUP_ELEM, align 4
  %13 = call i32 @syscall(i32 %11, i32 %12, %union.bpf_attr* %7, i32 4)
  ret i32 %13
}

declare dso_local i32 @ptr_to_u64(i8*) #1

declare dso_local i32 @syscall(i32, i32, %union.bpf_attr*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
